[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/stats/Stats.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Roboto/Roboto-Black.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/Roboto/text.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/fonts/Roboto/title.tres" type="DynamicFont" id=4]
[ext_resource path="res://bodies/button/Button.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 100
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="Stats" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 24
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 73.0
margin_right = 720.0
margin_bottom = 191.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 10
custom_constants/shadow_offset_y = 10
text = "Statistics"
align = 1

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 215.0
margin_right = 720.0
margin_bottom = 272.0
custom_fonts/font = ExtResource( 4 )
text = "Hard"
align = 1

[node name="BestHard" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 296.0
margin_right = 720.0
margin_bottom = 339.0
custom_constants/separation = 32
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/BestHard"]
margin_left = 272.0
margin_right = 344.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 3 )
text = "Best"

[node name="Data" type="Label" parent="VBoxContainer/BestHard"]
margin_left = 376.0
margin_right = 448.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 3 )
text = "Best"

[node name="WinsHard" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 363.0
margin_right = 720.0
margin_bottom = 406.0
custom_constants/separation = 32
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/WinsHard"]
margin_left = 268.0
margin_right = 348.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 3 )
text = "Wins"

[node name="Data" type="Label" parent="VBoxContainer/WinsHard"]
margin_left = 380.0
margin_right = 452.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 3 )
text = "Best"

[node name="AverageHard" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 430.0
margin_right = 720.0
margin_bottom = 473.0
custom_constants/separation = 32
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/AverageHard"]
margin_left = 243.0
margin_right = 373.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 3 )
text = "Average"

[node name="Data" type="Label" parent="VBoxContainer/AverageHard"]
margin_left = 405.0
margin_right = 477.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 3 )
text = "Best"

[node name="Label3" type="Label" parent="VBoxContainer"]
margin_top = 497.0
margin_right = 720.0
margin_bottom = 554.0
custom_fonts/font = ExtResource( 4 )
text = "Medium"
align = 1

[node name="BestMedium" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 578.0
margin_right = 720.0
margin_bottom = 621.0
custom_constants/separation = 32
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/BestMedium"]
margin_left = 272.0
margin_right = 344.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 3 )
text = "Best"

[node name="Data" type="Label" parent="VBoxContainer/BestMedium"]
margin_left = 376.0
margin_right = 448.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 3 )
text = "Best"

[node name="WinsMedium" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 645.0
margin_right = 720.0
margin_bottom = 688.0
custom_constants/separation = 32
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/WinsMedium"]
margin_left = 268.0
margin_right = 348.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 3 )
text = "Wins"

[node name="Data" type="Label" parent="VBoxContainer/WinsMedium"]
margin_left = 380.0
margin_right = 452.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 3 )
text = "Best"

[node name="AverageMedium" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 712.0
margin_right = 720.0
margin_bottom = 755.0
custom_constants/separation = 32
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/AverageMedium"]
margin_left = 243.0
margin_right = 373.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 3 )
text = "Average"

[node name="Data" type="Label" parent="VBoxContainer/AverageMedium"]
margin_left = 405.0
margin_right = 477.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 3 )
text = "Best"

[node name="Label4" type="Label" parent="VBoxContainer"]
margin_top = 779.0
margin_right = 720.0
margin_bottom = 836.0
custom_fonts/font = ExtResource( 4 )
text = "Easy"
align = 1

[node name="BestEasy" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 860.0
margin_right = 720.0
margin_bottom = 903.0
custom_constants/separation = 32
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/BestEasy"]
margin_left = 272.0
margin_right = 344.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 3 )
text = "Best"

[node name="Data" type="Label" parent="VBoxContainer/BestEasy"]
margin_left = 376.0
margin_right = 448.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 3 )
text = "Best"

[node name="WinsEasy" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 927.0
margin_right = 720.0
margin_bottom = 970.0
custom_constants/separation = 32
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/WinsEasy"]
margin_left = 268.0
margin_right = 348.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 3 )
text = "Wins"

[node name="Data" type="Label" parent="VBoxContainer/WinsEasy"]
margin_left = 380.0
margin_right = 452.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 3 )
text = "Best"

[node name="AverageEasy" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 994.0
margin_right = 720.0
margin_bottom = 1037.0
custom_constants/separation = 32
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/AverageEasy"]
margin_left = 243.0
margin_right = 373.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 3 )
text = "Average"

[node name="Data" type="Label" parent="VBoxContainer/AverageEasy"]
margin_left = 405.0
margin_right = 477.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 3 )
text = "Best"

[node name="Back" parent="VBoxContainer" instance=ExtResource( 9 )]
margin_top = 1061.0
margin_bottom = 1211.0
text = "Back"
